# mininos

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Makefile  meson.build  meson_options.txt
cmake/: qemu.cmake
include/kernel/: errcode.h  externc.h
include/libc/: stdbool.h  stddef.h  stdint.h
make/: config.mk  tools.mk
meson/: meson.build
meson/flags/: meson.build
meson/modules/: meson.build
meson/targets/: meson.build
meson/targets/disk/: meson.build
meson/targets/qemu/: meson.build
meson/toolchains/: i686-toolchain.conf
meson/tools/: meson.build
scripts/: build.sh  clean.sh  default_generator.sh  execute.sh  generate_unix_makefiles.sh  run.sh  run_generator.sh  setup.sh  setup_i686.sh
scripts/lib/: assert_command.sh  error.sh  fetch_argument.sh
src/: CMakeLists.txt  Makefile  meson.build
src/boot/: CMakeLists.txt  Makefile  bootloader.asm  bootloader.nasm  gdt.inc  gdt.nasm  load_kernel.inc  meson.build  print_string.inc  print_string.nasm  protected_mode.inc  protected_mode.nasm
src/drivers/: meson.build
src/drivers/vga/: meson.build
src/kernel/: entry_point.S  kernel_main.c  kmain.c  linker.ld  meson.build
src/libc/: meson.build
targets/: meson.build
targets/disk/: meson.build
targets/qemu/: meson.build
