# meson/flags/meson.build
#
# Copyright (c) 2026-Present Nessbe
#
# This file is licensed under the terms specified in the
# LICENSE file located at the root of this repository.

optimization_flag = '-O0'

nasm_binary_flags = [
	'-f',
	'bin'
]

c_elf_flags = [
	'-ffreestanding',
	'-fno-stack-protector',
	'-fno-pic',
	'-m32',
	optimization_flag
]
