# meson/tools/meson.build
#
# Copyright (c) 2026-Present Nessbe
#
# This file is licensed under the terms specified in the
# LICENSE file located at the root of this repository.

nasm = find_program('nasm', required: true)
cc = find_program('c', required: true)
ld = find_program('ld', required: true)

qemu = find_program('qemu', required: true)

objcopy = find_program('objcopy', required: true)
